suggesting that perhaps this change could be made directly in .rvt file without opening revit
** April
*** 03
**** =11:22= couldn't get ShowGeogrpahicData command to work
jeremy tammik [[https://thebuildingcoder.typepad.com/blog/2012/11/survey-and-project-base-point.html][reported]] that shared coordaintes / shared site information isn't available to revit api
couldn't find any coordinate values when parsing .rvt file directly
*** 04
**** =17:00= couldn't get DirectContext3D API to work to show even anything on screen
further research is needed
** May
*** 11
**** =22:55= very disappointingly [[revit link display settings are not available via api][https://forums.autodesk.com/t5/revit-ideas/api-for-rvt-link-display-settings/idc-p/13624379]]
this makes working with revit links very difficult
for example changing "by linked view" setting across floors
*** 16
**** =09:47= still can't get DrawRevisionCloudAroundSelectedElements to work
can't understand why transformation from "view-space" to "sheet-space" doesn't work
*** 20
**** =14:44= tried writing SelectLast50CreatedElements to test if order of Ids in Revit model corresponds (reliably) with order of creating elements
it doesn't, some previous elements had higher Ids from newer elements
https://chatgpt.com/share/682c876b-f5d4-800c-b148-6f1a143cf540
may need to look deeper into format of .rvt file itself, if it stores any more hints
otherwise it may become necessary to create a "live tracker of transcations" that would continuously store changes (hopefully not)
*** 21
**** =10:02= thought of trying to make datagrid writable
for example it would be useful in FilterSelectedElements which lets you slice and dice revit data, but not change it
  e.g. to match doors types names and type marks
wondering if "write mode" could be triggered without changing current view